# benchmark_rust_embed_database

./: .gitmodules  Cargo.toml  build.xsh  dev.sh  mac.md  readme.md
src/: main.rs
