[package]
name = "benchmark_rust_embed_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
btree-slab = "0.4.0"
dashmap = "5.3.3"
duckdb = { version = "0.3.4", features = ["bundled", "r2d2"] }
parking_lot = "0.12.0"
persy = { version = "1.2.6", features = ["background_ops"] }
r2d2 = "0.8.9"
rand = "0.8.5"
rayon = "1.5.3"
rocksdb = { version = "0.18.0", features = ["zstd"], default-features = false }
rusty-leveldb = "0.3.6"
sled = "0.34.7"
yakv = "0.2.7"
